--- a/lakesidemutual/kubernetes/manifests/customer-management-backend.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-management-backend.yaml
@@ -17,9 +17,9 @@ spec:
       containers:
         - env:
             - name: CUSTOMERCORE_BASEURL
-              value: http://customer-core:8110
+              value: customer-core
             - name: SPRING_BOOT_ADMIN_CLIENT_URL
-              value: http://spring-boot-admin:9000
+              value: spring-boot-admin
           image: fajmayor/customer-management-backend
           imagePullPolicy: Always
           name: customer-management-backend
@@ -38,4 +38,3 @@ spec:
     - name: "8100"
       port: 8100
       targetPort: 8100
-  type: NodePort
