--- a/lakesidemutual/kubernetes/manifests/customer-core.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-core.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - env:
             - name: SPRING_BOOT_ADMIN_CLIENT_URL
-              value: spring-boot-admin
+              value: http://spring-boot-admin:9000
           image: fajmayor/customer-core
           imagePullPolicy: Always
           name: customer-core
