--- a/lakesidemutual/kubernetes/manifests/customer-management-backend.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-management-backend.yaml
@@ -17,9 +17,9 @@ spec:
       containers:
         - env:
             - name: CUSTOMERCORE_BASEURL
-              value: customer-core
+              value: http://customer-core:8110
             - name: SPRING_BOOT_ADMIN_CLIENT_URL
-              value: spring-boot-admin
+              value: http://spring-boot-admin:9000
           image: fajmayor/customer-management-backend
           imagePullPolicy: Always
           name: customer-management-backend
