--- a/lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
@@ -17,9 +17,9 @@ spec:
       containers:
         - env:
             - name: REACT_APP_CUSTOMER_SELF_SERVICE_BACKEND
-              value: customer-self-service-backend
+              value: http://34.65.192.94:8080
             - name: REACT_APP_CUSTOMER_MANAGEMENT_BACKEND
-              value: customer-management-backend
+              value: http://34.65.192.94:8100
           image: fajmayor/customer-management-frontend
           imagePullPolicy: Always
           name: customer-management-frontend
