--- a/lakesidemutual/kubernetes/manifests/policy-management-backend.yaml
+++ b/lakesidemutual/kubernetes/manifests/policy-management-backend.yaml
@@ -40,7 +40,8 @@ spec:
     - name: "8090"
       port: 8090
       targetPort: 8090
-  type: NodePort
+  type: LoadBalancer
+  loadBalancerIP: 3.16.69.1
 ---
 # Not sure why, but we need two distinct LoadBalancers for this to work:
 apiVersion: v1
@@ -57,4 +58,5 @@ spec:
     - name: "61616"
       port: 61616
       targetPort: 61616
-  type: NodePort
+  type: LoadBalancer
+  loadBalancerIP: 3.16.69.1
