--- a/lakesidemutual/kubernetes/manifests/risk-management-server.yaml
+++ b/lakesidemutual/kubernetes/manifests/risk-management-server.yaml
@@ -38,4 +38,5 @@ spec:
     - name: "50051"
       port: 50051
       targetPort: 50051
-  type: NodePort
+  type: LoadBalancer
+  loadBalancerIP: 3.16.69.1
