--- a/lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
+++ b/lakesidemutual/kubernetes/manifests/customer-management-frontend.yaml
@@ -17,9 +17,9 @@ spec:
       containers:
         - env:
             - name: REACT_APP_CUSTOMER_SELF_SERVICE_BACKEND
-              value: http://3.16.69.1:8080
+              value: http://customer-self-service-backend:8080
             - name: REACT_APP_CUSTOMER_MANAGEMENT_BACKEND
-              value: http://3.16.69.1:8100
+              value: http://customer-management-backend:8100
           image: fajmayor/customer-management-frontend
           imagePullPolicy: Always
           name: customer-management-frontend
@@ -39,4 +39,3 @@ spec:
       port: 3020
       targetPort: 80
   type: LoadBalancer
-  loadBalancerIP: 3.16.69.1
