--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -176,6 +176,6 @@ jobs:
           kubectl apply -f comments-depl.yaml
           kubectl apply -f event-bus-depl.yaml
           kubectl apply -f moderation-depl.yaml
-          kubectl apply -f posts-depl.yaml
+          kubectl apply -f posts-depl.yml
           kubectl apply -f posts-srv.yaml
           kubectl apply -f query-depl.yaml
