--- a/.github/workflows/lakeside-action.yaml
+++ b/.github/workflows/lakeside-action.yaml
@@ -12,7 +12,7 @@ env:
     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
     DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-    TERRAFORM_ACTION: destroy
+    TERRAFORM_ACTION: apply
     GITHUB_USERNAME: ${{ vars.MY_GITHUB_USERNAME }}
     REPOSITORY_NAME: ${{ vars.REPOSITORY_NAME }}
     REGISTRY_ALIAS: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -170,11 +170,10 @@ jobs:
 
       - name: Run Manifest
         if: ${{ steps.tf-outputs.outputs.cluster_name != '' }}
-        working-directory: ./project/infra/k8s
+        working-directory: ./project-template/infra/
         run: |
-          kubectl apply -f client-depl.yaml
-          kubectl apply -f comments-depl.yaml
-          kubectl apply -f event-bus-depl.yaml
-          kubectl apply -f moderation-depl.yaml
-          kubectl apply -f posts-depl.yml
-          kubectl apply -f query-depl.yaml
+          kubectl apply -f backend.yaml
+          kubectl apply -f frontend.yaml
+          kubectl apply -f grafana.yaml
+          kubectl apply -f node-exporter.yaml
+          kubectl apply -f prometheus.yaml
